Fix T91872: incorrect socket inspection on group nodes

This bug was introduced in rBef45399f3be0955ba8.